# ConsoleCrafter

./: .gitignore  CMakeLists.txt  ClearTerminalEx.cpp  README.md  UML.drawio  coloredText.cpp  determineSystem.cpp  enableAnsi_Windows.cpp  multiSelectionPrompt.cpp  selectionPrompt.cpp  textStyling.cpp
src/: main.cpp
src/ansi/ansi_formatter/: ansi_formatter.cpp  ansi_formatter.hpp
src/ansi/color/: ColorCode.hpp  color.cpp  color.hpp
